k8s/Frontend/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merneat_frontend_deployment
  namespace: merneat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: radhe2003/merneat_frontend:01
          ports:
            - containerPort: 5000
