k8s/Frontend/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: merneat
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: frontend
